# embedded-framework

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  partitions.csv  partitions8M.csv  sdkconfig  sdkconfig.defaults  version.txt
.github/workflows/: release.yml
components/auth/: ApiKeyStore.cpp  AuthApiHandler.cpp  AuthStore.cpp  CMakeLists.txt  SessionStore.cpp
components/auth/include/auth/: ApiKeyStore.hpp  AuthApiHandler.hpp  AuthConfig.hpp  AuthStore.hpp  SessionStore.hpp
components/common/: CMakeLists.txt
components/core/: CMakeLists.txt  FrameworkContext.cpp
components/core/include/core/: FrameworkContext.hpp
components/core_api/: CMakeLists.txt  CredentialApiHandler.cpp  ProvisioningApiHandler.cpp  WiFiApiHandler.cpp
components/credential_store/: CMakeLists.txt  CredentialApiHandler.cpp  CredentialStore.cpp  CredentialStore.hpp
components/device/: CMakeLists.txt  DeferredExecutor.cpp  DeviceApiHandler.cpp  DeviceConfigStore.cpp  DeviceInterface.cpp  DeviceService.cpp  EspDeviceInterface.cpp
components/device/include/device/: ClockInterface.hpp  DeferredExecutor.hpp  DeviceApiHandler.hpp  DeviceConfigStore.hpp  DeviceInterface.hpp  DeviceService.hpp  EspDeviceInterface.hpp  EspTypeAdapter.hpp  RandomInterface.hpp  TimerInterface.hpp
components/device_cert/: CMakeLists.txt  DeviceCert.cpp
components/embedded_files/: CMakeLists.txt  EmbeddedFileHandler.cpp  EmbeddedFileTable.cpp
components/embedded_files/files/: common_api.js  common_styles.css  embedded_api.js  embedded_app.js  embedded_control.html  embedded_device_control.html  embedded_device_info.html  embedded_index.html  embedded_navigation.html  embedded_router.js  embedded_styles.css  embedded_ui.js  embedded_wifi.html  provision_app.js  provision_ui.js  (+3 more)
components/esp_platform/: CMakeLists.txt  EspClockInterface.cpp  EspDeviceCert.cpp  EspDeviceInterface.cpp  EspHttpRequest.cpp  EspHttpResponse.cpp  EspHttpServer.cpp  EspMdnsManager.cpp  EspNvsStore.cpp  EspRandomInterface.cpp  EspTimerInterface.cpp  EspWiFiInterface.cpp  TlsMemPool.cpp  WiFiHelper.cpp
components/esp_platform/certs/: servercert.pem
components/esp_platform/include/esp_platform/: EspClockInterface.hpp  EspDeviceCert.hpp  EspDeviceInterface.hpp  EspHttpRequest.hpp  EspHttpResponse.hpp  EspHttpServer.hpp  EspMdnsManager.hpp  EspNvsStore.hpp  EspRandomInterface.hpp  EspTimerInterface.hpp  EspTypeAdapter.hpp  EspWiFiInterface.hpp  TlsMemPool.hpp  WiFiHelper.hpp
components/framework/: CMakeLists.txt  EmbeddedFileHandler.cpp  EmbeddedFileTable.cpp  FrameworkContext.cpp
components/framework/files/: embedded_router.js  embedded_styles.css
components/framework/include/framework/: EmbeddedFileHandler.hpp  EmbeddedFileTable.hpp  FrameworkContext.hpp
components/framework_files/: CMakeLists.txt  EmbeddedFileHandler.cpp  EmbeddedFileTable.cpp  compress.py
components/framework_files/files/: embedded_common_ui.js  embedded_modal.js  framework_api.js  framework_app.js  framework_index.html  framework_modal.js  framework_styles.css  framework_ui.js  framework_ui_device.js  framework_ui_firmware.js  framework_ui_security.js  framework_ui_wifi.js
components/framework_files/include/framework_files/: EmbeddedFileHandler.hpp  EmbeddedFileTable.hpp
components/http/: CMakeLists.txt  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
components/http/certs/: README.md  prvtkey.pem
components/http/include/http/: HttpHandler.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  HttpTypes.hpp
components/logger/: CMakeLists.txt
components/network_store/: CMakeLists.txt  NetworkApiHandler.cpp  NetworkStore.cpp
components/ota/: CMakeLists.txt  Kconfig  OtaApiHandler.cpp  OtaManager.cpp  OtaPuller.cpp  OtaWriter.cpp
components/ota/include/ota/: OtaApiHandler.hpp  OtaManager.hpp  OtaPuller.hpp  OtaWriter.hpp
components/persistent_log/: CMakeLists.txt  PersistentLogSink.cpp
components/static_assets/: CMakeLists.txt  ContentType.cpp  EmbeddedAssetTable.cpp  StaticFileHandler.cpp  StaticFileRouter.cpp
components/static_assets/assets/: app.js  common_api.js  common_modal.js  common_styles.css  common_ui.js  index.html  provision_app.js  provision_index.html  runtime_app.js  runtime_index.html
components/static_assets/include/static_assets/: ContentType.hpp  EmbeddedAssetTable.hpp  StaticFileHandler.hpp  StaticFileRouter.hpp
components/wifi_manager/: CMakeLists.txt  EmbeddedServer.cpp  EspWiFiInterface.cpp  MdnsManager.cpp  ProvisioningServer.cpp  ProvisioningServer.hpp  ProvisioningState.hpp  ProvisioningStateMachine.cpp  RuntimeServer.cpp  RuntimeServer.hpp  WiFiApiHandler.cpp  WiFiContext.hpp  WiFiHelper.cpp  WiFiInterface.cpp  WiFiManager.cpp  WiFiManager.hpp  WiFiState.cpp  WiFiState.hpp  WiFiStateMachine.cpp  WiFiTypes.cpp
components/wifi_manager/include/wifi_manager/: EmbeddedServer.hpp  EspWiFiInterface.hpp  MdnsInterface.hpp  MdnsManager.hpp  ProvisioningError.hpp  ProvisioningServer.hpp  ProvisioningState.hpp  ProvisioningStateMachine.hpp  RuntimeServer.hpp  WiFiApiHandler.hpp  WiFiContext.hpp  WiFiHelper.hpp  WiFiInterface.hpp  WiFiManager.hpp  WiFiStateMachine.hpp  WiFiTypes.hpp
components/wifi_types/: WiFiTypes.cpp
docs/: README.md  api-reference.md  creating-an-app.md  flash_layout.md  maintainer-guide.md  new-developer-workstation-setup.md  pm-dfs-notes.md  url_plan.md
main/: AppFileTable.cpp  AppFileTable.hpp  ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  LoggingConfig.cpp  LoggingConfig.hpp  PersistentLogConfig.cpp  PersistentLogConfig.hpp  app_main.cpp  idf_component.yml
main/app/: AppFileTable.cpp  AppFileTable.hpp  ApplicationContext.cpp  ApplicationContext.hpp  TemperatureHandler.cpp  TemperatureHandler.hpp
main/app_files/: AppFileTable.cpp  AppFileTable.hpp
main/app_files/files/: app.css  app_index.html
main/files/: app_index.html
partitions/: ota0_ota1.csv  ota0_ota1_4MB.csv
troubled/: CredentialApiHandler.cpp  ProvisioningApiHandler.hpp  serveEmbedded.hpp
troubled/core_api/: CMakeolc.txt  CredentialApiHandler.cpp
(+24 files in other folders)
