idf_component_register(
    SRCS
        ApiKeyStore.cpp
        AuthApiHandler.cpp
        AuthStore.cpp
        SessionStore.cpp
    INCLUDE_DIRS
        include
    REQUIRES
        cjson
        common
        esp_platform
        esp_hw_support
        http
        logger
        mbedtls
        nvs_flash
)
