idf_component_register(
    SRCS
    	DeferredExecutor.cpp
    	DeviceApiHandler.cpp
    	EspDeviceInterface.cpp
    INCLUDE_DIRS
        include
    REQUIRES
        common
        http
        logger
        esp_timer
        esp_netif
        nvs_flash
        esp_psram
        app_update
        esp_driver_tsens
)