idf_component_register(
    SRCS
        EspClockInterface.cpp
        EspDeviceCert.cpp
        EspDeviceInterface.cpp
        EspHttpRequest.cpp
        EspHttpResponse.cpp
        EspHttpServer.cpp
        EspMdnsManager.cpp
        EspNvsStore.cpp
        EspRandomInterface.cpp
        EspTimerInterface.cpp
        EspWiFiInterface.cpp
        WiFiHelper.cpp
    INCLUDE_DIRS
        include
    REQUIRES
        common
        logger
        device
        device_cert
        http
        http_types
        wifi_manager
        network_store
        esp_pm
        esp_timer
        esp_netif
        nvs_flash
        esp_psram
        app_update
        esp_driver_tsens
        esp_wifi
        esp_event
        esp_http_server
        esp_https_server
        mbedtls
        nvs_flash
        espressif__mdns
    EMBED_TXTFILES
        certs/servercert.pem
        certs/prvtkey.pem
)
