idf_component_register(
    SRCS
        FrameworkContext.cpp
    INCLUDE_DIRS
        include
    REQUIRES
        auth
        common
        http_types
        network_store
        device
        device_cert
        esp_platform
        http
        logger
        ota
        framework_files
        wifi_manager
)
