idf_component_register(
    SRCS
        OtaApiHandler.cpp
        OtaManager.cpp
        OtaPuller.cpp
        OtaWriter.cpp
    INCLUDE_DIRS
        include
    REQUIRES
        common
        device
        http
        logger
        app_update
        esp_partition
        esp_https_ota
        esp_http_client
        esp-tls
        nvs_flash
)
