idf_component_register(
    SRCS
        EmbeddedServer.cpp
        WiFiApiHandler.cpp
        WiFiManager.cpp
        WiFiStateMachine.cpp
        WiFiTypes.cpp
    INCLUDE_DIRS
        include
    REQUIRES
        auth
        app_update
        cjson
        common
        http_types
        network_store
        device
        ota
        framework_files
        http
        logger
)
